compiler/framework/test/fail/types_more_monop.cvc
// Should produce a type checking error because monops also have a type.

export int main() {
    int a = 0;
    a = -(5.0 * 6.0);
    return 0;
}
